# ChangeLog for net-analyzer/nmap
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/ChangeLog,v 1.172 2008/05/12 15:55:12 corsair Exp $

  12 May 2008; Markus Rothe <corsair@gentoo.org> nmap-4.60.ebuild:
  Stable on ppc64

*nmap-4.62 (07 May 2008)

  07 May 2008; Michał Januszewski <spock@gentoo.org> +nmap-4.62.ebuild:
  Version bump (bug #220449).

  02 May 2008; Raúl Porcel <armin76@gentoo.org> nmap-4.60.ebuild:
  alpha/ia64/sparc/x86 stable

  29 Mar 2008; Michał Januszewski <spock@gentoo.org> nmap-4.60.ebuild:
  HOMEPAGE update (bug #215171).

*nmap-4.60 (25 Mar 2008)

  25 Mar 2008; Michał Januszewski <spock@gentoo.org> +nmap-4.60.ebuild:
  Version bump (bug #214320).

  25 Mar 2008; Michał Januszewski <spock@gentoo.org> nmap-4.53.ebuild:
  Fix bug #214648.

  09 Mar 2008; nixnut <nixnut@gentoo.org> nmap-4.53.ebuild:
  Stable on ppc wrt bug 212482

  08 Mar 2008; Michał Januszewski <spock@gentoo.org> nmap-4.53.ebuild:
  Fix bug #212586.

  08 Mar 2008; Jeroen Roovers <jer@gentoo.org> nmap-4.53.ebuild:
  Stable for HPPA (bug #212482).

  07 Mar 2008; Brent Baude <ranger@gentoo.org> nmap-4.53.ebuild:
  stable ppc64, bug 212482

  07 Mar 2008; Richard Freeman <rich0@gentoo.org> nmap-4.53.ebuild:
  amd64 stable - 212482

  04 Mar 2008; <pva@gentoo.org> metadata.xml, nmap-4.20.ebuild:
  mips moved to unstable as dev-libs/libpcre dependency already did. Added
  netmon in metadata per discussion in bug #212159.

  04 Mar 2008; Michał Januszewski <spock@gentoo.org> nmap-4.53.ebuild:
  Fix bug #212159.

  21 Feb 2008; Raúl Porcel <armin76@gentoo.org> nmap-4.53.ebuild:
  alpha/ia64/sparc/x86 stable

  11 Feb 2008; Raúl Porcel <armin76@gentoo.org> nmap-4.52.ebuild:
  alpha/ia64/sparc/x86 stable

  11 Feb 2008; Christoph Mende <angelos@gentoo.org> nmap-4.50.ebuild:
  Stable on amd64

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> nmap-4.50.ebuild:
  Stable on ppc64
