@@ -1,6 +1,6 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/nmap-4.62.ebuild,v 1.1 2008/05/07 19:31:28 spock Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nmap/nmap-4.65.ebuild,v 1.1 2008/06/09 19:31:17 spock Exp $
 
 EAPI="prefix"
 
